<resources>
    <string name="app_name">Yed:D</string>
    <string name="action_settings">Settings</string>

    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="register">New User? Register here</string>
    <string name="sign_up">Sign Up</string>

    <string name="create_blog">CREATE BLOG</string>
    <string name="show_blog">SHOW BLOG</string>

    <string name="title">Title</string>
    <string name="title_activity_blog_feed">BlogFeedActivity</string>

    <string name="post">Post</string>
    <string name="title_activity_story_feed">StoryFeedActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="txt_yo_yo">Yo Yo</string>

</resources>
